--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -6,9 +6,9 @@ Table Of Contents:
 - Navigation
 - Header
 - About
-- Services
+- departments
 - Details
-- Projects
+- what we do
 - Works
 - Testimonials
 - Questions
@@ -73,7 +73,8 @@ h4 {
 	font-weight: 700;
 	font-size: 1.5rem;
 	line-height: 2rem;
-	font-family: "Poppins"
+	font-family: "Poppins";
+	text-align : center;
 }
 
 h5 {
@@ -152,7 +153,7 @@ a:hover {
 
 .btn-solid-reg {
 	display: inline-block;
-	padding: 1.375rem 2.25rem 1.375rem 2.25rem;
+	padding: 1rem 2rem 1rem 2rem;
 	border: 1px solid #0b36a8;
 	background-color: #0b36a8;
 	color: #ffffff;
@@ -385,8 +386,8 @@ input[type='checkbox'] {
 }
 
 .navbar .logo-image img {
-    width: 118px;
-	height: 36px;
+    width: 200px;
+	height: 35px;
 }
 
 .navbar .logo-text {
@@ -521,10 +522,19 @@ input[type='checkbox'] {
 .header {
 	padding-top: 7rem;
 	padding-bottom: 5.5rem;
-	background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url('../images/header-background.jpg') center center no-repeat;
+	background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url('../images/cover_hd.jpg') center center no-repeat;
 	background-size: cover;
 	text-align: center;
 }
+.masthead-heading {
+	font-size: 2.25rem;
+	font-weight: 700;
+	color: #f7f9fb;
+	text-align: center;
+	line-height: 3.25rem;
+	margin-bottom: 2rem;
+	font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  }
 
 .header .h1-large {
 	margin-bottom: 1.75rem;
@@ -579,8 +589,177 @@ input[type='checkbox'] {
 }
 
 
+.timeline {
+	position: relative;
+	padding: 0;
+	list-style: none;
+  }
+  .timeline:before {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 40px;
+	width: 2px;
+	margin-left: -1.5px;
+	content: "";
+	background-color: #e9ecef;
+  }
+  .timeline > li {
+	position: relative;
+	min-height: 50px;
+	margin-bottom: 50px;
+  }
+  .timeline > li:after, .timeline > li:before {
+	display: table;
+	content: " ";
+  }
+  .timeline > li:after {
+	clear: both;
+  }
+  .timeline > li .timeline-panel {
+	position: relative;
+	float: right;
+	width: 100%;
+	padding: 0 20px 0 100px;
+	text-align: left;
+  }
+  .timeline > li .timeline-panel:before {
+	right: auto;
+	left: -15px;
+	border-right-width: 15px;
+	border-left-width: 0;
+  }
+  .timeline > li .timeline-panel:after {
+	right: auto;
+	left: -14px;
+	border-right-width: 14px;
+	border-left-width: 0;
+  }
+  .timeline > li .timeline-image {
+	position: absolute;
+	z-index: 100;
+	left: 0;
+	width: 80px;
+	height: 80px;
+	margin-left: 0;
+	text-align: center;
+	color: white;
+	border: 7px solid #e9ecef;
+	border-radius: 100%;
+	background-color: #000000;
+  }
+  .timeline > li .timeline-image h4, .timeline > li .timeline-image .h4 {
+	font-size: 10px;
+	line-height: 14px;
+	margin-top: 12px;
+  }
+  .timeline > li.timeline-inverted > .timeline-panel {
+	float: right;
+	padding: 0 20px 0 100px;
+	text-align: left;
+  }
+  .timeline > li.timeline-inverted > .timeline-panel:before {
+	right: auto;
+	left: -15px;
+	border-right-width: 15px;
+	border-left-width: 0;
+  }
+  .timeline > li.timeline-inverted > .timeline-panel:after {
+	right: auto;
+	left: -14px;
+	border-right-width: 14px;
+	border-left-width: 0;
+  }
+  .timeline > li:last-child {
+	margin-bottom: 0;
+  }
+  .timeline .timeline-heading h4, .timeline .timeline-heading .h4 {
+	margin-top: 0;
+	color: inherit;
+  }
+  .timeline .timeline-heading h4.subheading, .timeline .timeline-heading .subheading.h4 {
+	text-transform: none;
+  }
+  .timeline .timeline-body > ul,
+  .timeline .timeline-body > p {
+	margin-bottom: 0;
+  }
+  
+  @media (min-width: 768px) {
+	.timeline:before {
+	  left: 50%;
+	}
+	.timeline > li {
+	  min-height: 100px;
+	  margin-bottom: 100px;
+	}
+	.timeline > li .timeline-panel {
+	  float: left;
+	  width: 41%;
+	  padding: 0 20px 20px 30px;
+	  text-align: right;
+	}
+	.timeline > li .timeline-image {
+	  left: 50%;
+	  width: 100px;
+	  height: 100px;
+	  margin-left: -50px;
+	}
+	.timeline > li .timeline-image h4, .timeline > li .timeline-image .h4 {
+	  font-size: 13px;
+	  line-height: 18px;
+	  margin-top: 16px;
+	}
+	.timeline > li.timeline-inverted > .timeline-panel {
+	  float: right;
+	  padding: 0 30px 20px 20px;
+	  text-align: left;
+	}
+  }
+  @media (min-width: 992px) {
+	.timeline > li {
+	  min-height: 150px;
+	}
+	.timeline > li .timeline-panel {
+	  padding: 0 20px 20px;
+	}
+	.timeline > li .timeline-image {
+	  width: 150px;
+	  height: 150px;
+	  margin-left: -75px;
+	}
+	.timeline > li .timeline-image h4, .timeline > li .timeline-image .h4 {
+	  font-size: 18px;
+	  line-height: 26px;
+	  margin-top: 30px;
+	}
+	.timeline > li.timeline-inverted > .timeline-panel {
+	  padding: 0 20px 20px;
+	}
+  }
+  @media (min-width: 1200px) {
+	.timeline > li {
+	  min-height: 170px;
+	}
+	.timeline > li .timeline-panel {
+	  padding: 0 20px 20px 100px;
+	}
+	.timeline > li .timeline-image {
+	  width: 170px;
+	  height: 170px;
+	  margin-left: -85px;
+	}
+	.timeline > li .timeline-image h4, .timeline > li .timeline-image .h4 {
+	  margin-top: 40px;
+	}
+	.timeline > li.timeline-inverted > .timeline-panel {
+	  padding: 0 100px 20px 20px;
+	}
+  }
+
+
 /********************/
-/*     Services     */
+/*     departments     */
 /********************/
 .basic-2 {
 	padding-top: 7.75rem;
@@ -601,6 +780,7 @@ input[type='checkbox'] {
 	margin-bottom: 3rem;
 	padding: 3.5rem 1rem 2.125rem 1rem;
 	border: 1px solid #cfd7de;
+	text-align: center;
 }
 
 .basic-2 .fas,
@@ -645,7 +825,7 @@ input[type='checkbox'] {
 
 
 /********************/
-/*     Projects     */
+/*     what we do     */
 /********************/
 .basic-3 {
 	padding-top: 7.75rem;
@@ -1003,12 +1183,12 @@ a:hover.back-to-top {
 	/* end of header */
 
 
-	/* Services */
+	/* departments */
 	.basic-2 .text-box {
 		padding-right: 2.125rem;
 		padding-left: 2.125rem;
 	}
-	/* end of services */
+	/* end of departments */
 
 
 	/* Extra Pages */
